# lad

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  PRODUCTION-CHECKLIST.md  README.md  SECURITY.md  mkdocs.yml
.github/workflows/: docs.yml
demo/: .env.example  README.md  hotel_agent.py  index.html  requirements.txt  run_demo.sh  user_agent.py
demo/tests/: conftest.py  test_hotel_agent.py  test_user_agent.py
docs/: CNAME  examples.md  index.md
docs/reference/: client.md  index.md  server.md  simulation.md
docs/spec/: index.md  schemas.md
reference/: README.md  demo.py  pyproject.toml
reference/client/: __init__.py  lad_client.py  requirements.txt
reference/common/: __init__.py  config.py  signing.py
reference/server/: __init__.py  lad_server.py  requirements.txt
reference/simulation/: Dockerfile.client  Dockerfile.server  README.md  docker-compose.yml  guest_device.py  run.sh
reference/tests/: __init__.py  test_config.py  test_lad.py  test_security.py
spec/: spec.md
spec/schemas/: discovery-response.json  mdns-txt-record.json
